2008-03-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Merge 24892:25025 from trunk.
	
2008-03-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/widgets/gimptoolbox.[ch]
	* app/widgets/gimptoolbox-dnd.c: fiddle around with
	layout of toolbox.
	
2008-03-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/widgets/gimpmenudock.c: fix error in handling of
	multi-column docks.
	
2008-03-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/widgets/gimppropwidgets.c: set border width of
	expanding frames to 0.
	
2008-03-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/widgets/gimplayertreeview.c: change layout of
	options to improve usage of space.
	
2008-03-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/widgets/gimpviewablebox.c: when moving the elements
	of a "viewable box" into a table, but the button into
	an hbox.
	
2008-03-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* themes/Default/gtkrc: tweak some style values to try to
	reduce wasted space.
	
2008-03-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/widgets/gimpbrushfactoryview.[ch]
	* app/widgets/gimpbrushselect.c: use scale control instead of
	scale entry for brush spacing.
	
2008-03-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimppaintoptions-gui.c: fiddle with layout in
	several ways.
	
2008-03-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* libgimpwidgets/gimppropwidgets.[ch]
	* app/tools/gimpinkoptions-gui.c
	* app/tools/gimpcoloroptions.c
	* app/tools/gimpblendoptions.c: add "scale control" prop widget,
	and use it in tool options.
	
2008-03-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* libgimpwidgets/gimpscalecontrol.[ch]: assorted fixes, and
	improvements in appearance.
	
2008-03-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* libgimpwidgets/gimpcellrenderertoggle.c: reduce horizontal
	space around buttons.
	
2008-03-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/display/gimpdisplayshell.[ch]: when we have a scratch